--- a/index.html
+++ b/index.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
-<html>
 <html lang="ja">
-<header class="site-header">
-    <h1 class="site-logo"><img src="images/logo.png" alt="WEBDESIGNDAY"></h1>
-    <nav class="gnav">
-        <ul class="gnav__menu">
-            <li class="gnav__menu__item"><a href="">About</a></li>
-            <li class="gnav__menu__item"><a href="">Works</a></li>
-            <li class="gnav__menu__item"><a href="">Recruit</a></li>
-            <li class="gnav__menu__item"><a href="">News</a></li>
-            <li class="gnav__menu__item"><a href="">Contact</a></li>
-        </ul>
-    </nav>
-</header>
-<div class="hero"><img src="images/hero.jpg" alt="hero"></div>
-<div class="content">
+<head>
+<meta charset="utf-8">
+<title>template</title>
+<meta name="description"  content="template">
+
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="index.css">
+</head>
 <body>
+  <header id="header">
+    <h1>Logo</h1>
+    <nav>
+    <ul id="g-navi">
+      <li><a href="#area-1">Area1</a></li>
+      <li><a href="#area-2">Area2</a></li>
+      <li><a href="#area-3">Area3</a></li>
+    </ul>
+  </nav>
+  </header>
+    
+  <main>
+    <section id="area-1">
+    <h2>Area 1</h2>
+    <p>内容が入ります。</p>
+    <!--/area1--></section>
+    <section id="area-2">
+    <h2>Area 2</h2>
+    <p>内容が入ります。</p>
+    <!--/area2--></section>
+    <section id="area-3">
+    <h2>Area 3</h2>
+    <p>内容が入ります。</p>
+    <!--/area3--></section>
+    <!--/main--></main>
+    <footer id="footer">
+    <small>&copy; copyright.</small> 
+    </footer>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<!--自作のJS-->
-<script src="js/5-1-5.js"></script>
+<script src="index.js"></script>
 </body>
-</div>
-<footer class="site-footer">
-    <p class="copyright">michi</p>
-</footer>
+</html>
