--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header id="header">
-    <h1>Logo</h1>
+    <h1 class="site-logo"><img src="images/logo.png" alt="template"></h1>
     <nav>
     <ul id="g-navi">
       <li><a href="#area-1">Area1</a></li>
