--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
 <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-  <header id="header">
-    <h1 class="site-logo"><img src="images/logo.png" alt="template"></h1>
-    <nav>
-    <ul id="g-navi">
-      <li><a href="#area-1">Area1</a></li>
-      <li><a href="#area-2">Area2</a></li>
-      <li><a href="#area-3">Area3</a></li>
-    </ul>
-  </nav>
-  </header>
-    
-  <main>
-    <section id="area-1">
-    <h2>Area 1</h2>
-    <p>内容が入ります。</p>
-    <!--/area1--></section>
-    <section id="area-2">
-    <h2>Area 2</h2>
-    <p>内容が入ります。</p>
-    <!--/area2--></section>
-    <section id="area-3">
-    <h2>Area 3</h2>
-    <p>内容が入ります。</p>
-    <!--/area3--></section>
-    <!--/main--></main>
-    <footer id="footer">
-    <small>&copy; copyright.</small> 
-    </footer>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="index.js"></script>
+    <header id="header">
+        <h1><a href="index.html"><img src="images/logo.png" alt="logo" width="auto" height="70"></a></h1>
+        <nav>
+        <ul id="g-navi">
+        <li><a href="#area-1">Area1</a></li>
+        <li><a href="#area-2">Area2</a></li>
+        <li><a href="#area-3">Area3</a></li>
+        </ul>
+        </nav>
+        </header>
+        <main>
+        <section id="area-1">
+        <h2>Area 1</h2>
+        <p>testtest</p>
+        <!--/area1--></section>
+        <section id="area-2">
+        <h2>Area 2</h2>
+        <p>test2</p>
+        <!--/area2--></section>
+        <section id="area-3">
+        <h2>Area 3</h2>
+        <p>test3</p>
+        <!--/area3--></section>
+        <!--/main--></main>
+        <footer id="footer">
+        <small>&copy; copyright.</small> 
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <!--自作のJS-->
+        <script src="main.js"></script>
 </body>
 </html>
