--- a/menber.html
+++ b/menber.html
@@ -15,7 +15,7 @@
         <ul id="g-navi">
         <li><a href="about.html">aboutus</a></li>
         <li><a href="menber.html">member</a></li>
-        <li><a href="contact.html">contact</a></li>
+        <li><a href="contact.html">contactus</a></li>
         </ul>
         </nav>
         </header>
