--- a/index.html
+++ b/index.html
@@ -9,29 +9,21 @@
 <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <header id="header">
-        <h1><a href="index.html"><img src="images/logo.png" alt="logo" width="auto" height="70"></a></h1>
-        <nav>
-        <ul id="g-navi">
-        <li><a href="about.html">aboutus</a></li>
-        <li><a href="menber.html">member</a></li>
-        <li><a href="contact.html">contact</a></li>
-        </ul>
+    <header>
+        <h1><a href="index.html"><img src="images/logo.png" alt="写真" width="auto" height="60">
+        </a></h1>
+        <nav class="gnav">
+            <ul class="menu">
+                <li><a href="">○○について</a></li>
+                <li><a href="">仕事</a></li>
+                <li><a href="">お知らせ</a></li>
+                <li><a href="">お問い合わせ</a></li>
+            </ul>
         </nav>
-        </header>
-        <main>
-        <h2>Area 1</h2>
-        <p>a<br/>
-            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>a</p>
-        <h2>Area 2</h2>
-        <p>test2</p>
-        <h2>Area 3</h2>
-        <p>test3</p>
-        </main>
-        <footer id="footer">
-        <small>&copy; copyright.</small> 
-        </footer>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="main.js"></script>
+    </header>
+    
+    <main>
+        <p>こんにちは！</p>
+    </main>
 </body>
 </html>
